# genlic

./: CCertificate.cpp  CCertificate.h  CLicTool.cpp  CLicense.cpp  CMakeLists.txt  CSignature.cpp  CSignature.h  README.md  apps.c  apps.h  genlic.cpp  license.h  sigfile.cpp  test.cpp
include/: CLicTool.h  CLicense.h
